--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,7 +16,8 @@ html
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand href='/' Slides
+            a.navbar-brand href="/"
+              =image_tag src="home-icon.png"
           .collapse.navbar-collapse
             ul.nav.navbar-nav.navbar-right
               / - if current_user
