--- a/app/views/presentations/index.html.slim
+++ b/app/views/presentations/index.html.slim
@@ -1,28 +1,8 @@
-div.page-header
-  h1 Listing presentations
-
-table.table.table-striped.table-hover
-  thead
-    tr
-      th Title
-      th Presenter
-      th Theme
-      th
-
-  tbody
-    - @presentations.each do |presentation|
-      tr
-        /td= link_to_if can?(:show, presentation), presentation.id, presentation_path(presentation)
-        td= link_to presentation.title, presentation_path(presentation)
-        td= presentation.presenter
-        td= presentation.theme
-        td
-          /- if can? :edit, presentation
-          = link_to text_with_icon('Edit', 'edit'), edit_presentation_path(presentation), class: 'btn btn-default btn-xs'
-          '
-          /- if can? :destroy, presentation
-          = link_to text_with_icon('Destroy', 'remove'), presentation_path(presentation),
-                    method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-default btn-xs btn-danger'
-
-/- if can? :create, Presentation
-= link_to text_with_icon('New Presentation', 'plus'), new_presentation_path, class: 'btn btn-primary'
+.presentations-header Presentations
+.presentations-container
+  .presentation-thumbnail.new-presentation-thumbnail
+    .presentation-title= link_to icon('plus'), new_presentation_path
+  - @presentations.each do |presentation|
+    .presentation-thumbnail
+      .presentation-title= link_to presentation.title, presentation_path(presentation)
+      .presentation-presenter= presentation.presenter
