Makes slide body type text. Styles Single slide

--- a/app/views/presentations/index.html.slim
+++ b/app/views/presentations/index.html.slim
@@ -1,4 +1,4 @@
-.presentations-header Presentations
+.page-header Presentations
 .presentations-container
   .presentation-thumbnail.new-presentation-thumbnail
     .presentation-title= link_to icon('plus'), new_presentation_path
