--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,3 +3,9 @@
 @import "_navbar";
 @import "_footer";
 @import "_presentations";
+@import "_slides";
+
+.page-header {
+  text-align: center;
+  font-size: 64px;
+}
