Adds slides to presentation show

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,7 +4,7 @@
 @import "_footer";
 @import "_presentations";
 @import "_slides";
-
+@import "_thumbnails";
 .page-header {
   text-align: center;
   font-size: 64px;
