--- a/app/assets/stylesheets/_presentations.scss
+++ b/app/assets/stylesheets/_presentations.scss
@@ -1,19 +1,5 @@
-.presentations-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.presentation-thumbnail {
-  text-align: center;
-  width: 366px;
-  height: 199px;
-  background-color: #d8d8d8;
-  margin-right: 1em;
-  margin-top: 1em;
-}
-
 .presentation-title {
-  padding-top: 65px;
+  padding-top: 1.5em;
   font-size: 24px;
   padding-left: 0.5em;
   padding-right: 0.5em;
@@ -24,21 +10,4 @@
 
 .presentation-presenter {
   font-size: 18px;
-}
-
-.new-presentation-thumbnail {
-  background-color: #4a90e2;
-
-  .presentation-title {
-    font-size: 64px;
-    a {
-      color: #ffffff;
-    }
-  }
-
-  .add-new-presentation-text {
-    text-align: center;
-    font-size: 18px;
-    color: #ffffff;
-  }
 }
