--- a/app/views/presentations/show.html.slim
+++ b/app/views/presentations/show.html.slim
@@ -6,7 +6,7 @@
     .edit-slide-btn=link_to image_tag("edit-icon.png"), edit_presentation_path(@presentation)
     .delete-slide-btn=link_to image_tag("delete-icon-24x24.png"), presentation_path(@presentation),
             method: :delete, data: { confirm: "Are you sure?" }
-  .presentation-title= @presentation.title
+  .presentation-title=link_to @presentation.title, slide_path(@slides[0])
   .presentation-presenter= @presentation.presenter
 
 .thumbnails-container
