Adds authentication on presentations and slides

--- a/app/views/presentations/index.html.slim
+++ b/app/views/presentations/index.html.slim
@@ -1,12 +1,14 @@
 .page-header Presentations
 .thumbnails-container
-  .thumbnail.presentation-thumbnail.new-presentation-thumbnail
-    .add-new-btn= link_to icon('plus'), new_presentation_path
+  - if admin_signed_in?
+    .thumbnail.presentation-thumbnail.new-presentation-thumbnail
+      .add-new-btn= link_to icon('plus'), new_presentation_path
   - @presentations.each do |presentation|
     .thumbnail.presentation-thumbnail
-      .action-btns
-        .edit-slide-btn=link_to image_tag("edit-icon.png"), edit_presentation_path(presentation)
-        .delete-slide-btn=link_to image_tag("delete-icon-24x24.png"), presentation_path(presentation),
+      - if admin_signed_in?
+        .action-btns
+          .edit-slide-btn=link_to image_tag("edit-icon.png"), edit_presentation_path(presentation)
+          .delete-slide-btn=link_to image_tag("delete-icon-24x24.png"), presentation_path(presentation),
                 method: :delete, data: { confirm: "Are you sure?" }
       .presentation-title= link_to presentation.title, presentation_path(presentation)
       .presentation-presenter= presentation.presenter
