--- a/app/views/presentations/show.html.slim
+++ b/app/views/presentations/show.html.slim
@@ -2,22 +2,25 @@
   h1= @presentation.title
 
 .thumbnail.thumbnail--presentation
-  .action-btns
-    .edit-slide-btn=link_to image_tag("edit-icon.png"), edit_presentation_path(@presentation)
-    .delete-slide-btn=link_to image_tag("delete-icon-24x24.png"), presentation_path(@presentation),
-            method: :delete, data: { confirm: "Are you sure?" }
+  - if admin_signed_in?
+    .action-btns
+      .edit-slide-btn=link_to image_tag("edit-icon.png"), edit_presentation_path(@presentation)
+      .delete-slide-btn=link_to image_tag("delete-icon-24x24.png"), presentation_path(@presentation),
+              method: :delete, data: { confirm: "Are you sure?" }
   .presentation-title=link_to @presentation.title, slide_path(@slides[0])
   .presentation-presenter= @presentation.presenter
 
 .thumbnails-container
-  .thumbnail.presentation-thumbnail.new-presentation-thumbnail
-    .add-new-btn= link_to icon('plus'), new_slide_path({presentation_id: @presentation.id})
+  - if admin_signed_in?
+    .thumbnail.presentation-thumbnail.new-presentation-thumbnail
+      .add-new-btn= link_to icon('plus'), new_slide_path({presentation_id: @presentation.id})
   - @slides.each do |slide|
     .thumbnail.thumbnail--slide
-      .action-btns
-        .edit-slide-btn=link_to image_tag("edit-icon.png"), edit_slide_path(slide)
-        .delete-slide-btn=link_to image_tag("delete-icon-24x24.png"), slide_path(slide),
-                method: :delete, data: { confirm: "Are you sure?" }
+      - if admin_signed_in?
+        .action-btns
+          .edit-slide-btn=link_to image_tag("edit-icon.png"), edit_slide_path(slide)
+          .delete-slide-btn=link_to image_tag("delete-icon-24x24.png"), slide_path(slide),
+                  method: :delete, data: { confirm: "Are you sure?" }
       .slide-number-thumbnail=link_to slide.number, slide_path(slide)
       .slide-header-thumbnail=link_to slide.header, slide_path(slide)
 
