--- a/app/views/slides/edit.html.slim
+++ b/app/views/slides/edit.html.slim
@@ -1,4 +1,8 @@
-.page-header
-  h1 Editing slide
+- if admin_signed_in?
+  .page-header
+    h1 Editing slide
 
-== render 'form', slide: @slide
+  == render 'form', slide: @slide
+- else
+  p Please Sign In to view the content.
+  h2= link_to "Sign In", new_admin_session_path
