--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,6 +18,10 @@ html
               span.icon-bar
             a.navbar-brand href="/"
               =image_tag src="home-icon.png"
+            - if admin_signed_in?
+              = link_to 'Logout', destroy_admin_session_path, method: :delete
+            - else
+              = link_to 'Login', new_admin_session_path
           .collapse.navbar-collapse
             ul.nav.navbar-nav.navbar-right
               / - if current_user
