--- a/app/views/presentations/new.html.slim
+++ b/app/views/presentations/new.html.slim
@@ -1,4 +1,8 @@
-.page-header
-  h1 Create presentation
+- if admin_signed_in?
+  .page-header
+    h1 Create presentation
 
-== render 'form', presentation: @presentation
+  == render 'form', presentation: @presentation
+- else
+  p Please Sign In to view the content.
+  h2= link_to "Sign In", new_admin_session_path
