--- a/app/views/slides/index.html.slim
+++ b/app/views/slides/index.html.slim
@@ -1,30 +1,34 @@
-div.page-header
-  h1 Listing slides
+- if admin_signed_in?
+  div.page-header
+    h1 Listing slides
 
-table.table.table-striped.table-hover
-  thead
-    tr
-      th Title
-      th Header
-      th Number
-      th Body
-      th 
-
-  tbody
-    - @slides.each do |slide|
+  table.table.table-striped.table-hover
+    thead
       tr
-        /td= link_to_if can?(:show, slide), slide.id, slide_path(slide)
-        td= link_to slide.title, slide_path(slide)
-        td= slide.header
-        td= slide.number
-        td= slide.body
-        td
-          /- if can? :edit, slide
-          = link_to text_with_icon('Edit', 'edit'), edit_slide_path(slide), class: 'btn btn-default btn-xs'
-          '
-          /- if can? :destroy, slide
-          = link_to text_with_icon('Destroy', 'remove'), slide_path(slide),
-                    method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-default btn-xs btn-danger'
+        th Title
+        th Header
+        th Number
+        th Body
+        th
 
-/- if can? :create, Slide
-= link_to text_with_icon('New Slide', 'plus'), new_slide_path, class: 'btn btn-primary'
+    tbody
+      - @slides.each do |slide|
+        tr
+          /td= link_to_if can?(:show, slide), slide.id, slide_path(slide)
+          td= link_to slide.title, slide_path(slide)
+          td= slide.header
+          td= slide.number
+          td= slide.body
+          td
+            /- if can? :edit, slide
+            = link_to text_with_icon('Edit', 'edit'), edit_slide_path(slide), class: 'btn btn-default btn-xs'
+            '
+            /- if can? :destroy, slide
+            = link_to text_with_icon('Destroy', 'remove'), slide_path(slide),
+                      method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-default btn-xs btn-danger'
+
+  /- if can? :create, Slide
+  = link_to text_with_icon('New Slide', 'plus'), new_slide_path, class: 'btn btn-primary'
+- else
+  p Please Sign In to view the content.
+  h2= link_to "Sign In", new_admin_session_path
