--- a/app/views/presentations/index.html.slim
+++ b/app/views/presentations/index.html.slim
@@ -10,5 +10,7 @@
           .edit-slide-btn=link_to image_tag("edit-icon.png"), edit_presentation_path(presentation)
           .delete-slide-btn=link_to image_tag("delete-icon-24x24.png"), presentation_path(presentation),
                 method: :delete, data: { confirm: "Are you sure?" }
-      .presentation-title= link_to presentation.title, presentation_path(presentation)
+        .presentation-title.presentation-title--admin= link_to presentation.title, presentation_path(presentation)
+      - else
+        .presentation-title= link_to presentation.title, presentation_path(presentation)
       .presentation-presenter= presentation.presenter
