--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,32 +8,13 @@ html
     meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'
 
   body id=(controller.controller_name) class=(controller.action_name)
+    .page-header-container
+      = link_to image_tag(src="home-icon.png"), "/", class: "home-icon"
+      - if admin_signed_in?
+        = link_to image_tag(src="logout-icon-24x24.png"), destroy_admin_session_path, method: :delete, class: "session-icon"
+      - else
+        = link_to image_tag(src="login-icon-24x24.png"), new_admin_session_path, class: "session-icon"
     .wrapper
-      nav.navbar.navbar-default.navbar-fixed-top role='navigation'
-        .container
-          .navbar-header
-            button.button.navbar-toggle data-toggle='collapse' data-target='.navbar-collapse'
-              span.icon-bar
-              span.icon-bar
-              span.icon-bar
-            a.navbar-brand href="/"
-              =image_tag src="home-icon.png"
-            - if admin_signed_in?
-              = link_to 'Logout', destroy_admin_session_path, method: :delete
-            - else
-              = link_to 'Login', new_admin_session_path
-          .collapse.navbar-collapse
-            ul.nav.navbar-nav.navbar-right
-              / - if current_user
-              /  li.dropdown
-              /    a.dropdown-toggle href='#' data-toggle='dropdown'
-              /      = current_user.email
-              /      b.caret
-              /    ul.dropdown-menu
-              /      li= link_to text_with_icon('Sign Out', 'log-out'), sign_out_path
-              / - else
-              /  li= link_to text_with_icon('Sign In', 'log-in'), sign_in_path
-
       .container
         - flash.each do |name, msg|
           .alert.alert-dismissable class=alert_class(name)
