--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,7 @@
 @import "_footer";
 @import "_presentations";
 @import "_slides";
+@import "_slide_body";
 @import "_thumbnails";
 
 .page-header-container {
