Adds slide-section-containers styling

--- a/app/assets/stylesheets/_slide_body.scss
+++ b/app/assets/stylesheets/_slide_body.scss
@@ -74,3 +74,17 @@
     width: 50%;
   }
 }
+
+.slide-section-container {
+  &--center {
+    text-align: center;
+  }
+
+  &--left {
+    text-align: left;
+  }
+
+  &--right {
+    text-align: right;
+  }
+}
