Adds text color styles for red green and blue

--- a/app/assets/stylesheets/_slide_body.scss
+++ b/app/assets/stylesheets/_slide_body.scss
@@ -88,3 +88,17 @@
     text-align: right;
   }
 }
+
+.text {
+  &--red {
+    color: red;
+  }
+
+  &--green {
+    color: #27ce27;
+  }
+
+  &--blue {
+    color: blue;
+  }
+}
