Handles overflowing slides

--- a/app/assets/stylesheets/_slide_body.scss
+++ b/app/assets/stylesheets/_slide_body.scss
@@ -1,3 +1,13 @@
+#slides.show,
+.presentation_intro {
+  .container {
+    margin-left: 0;
+    margin-right: 0;
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
+
 .slide-body {
   font-size: 24px;
   margin-top: 1em;
