Updates app to use vh and vw
Updated nav

--- a/app/assets/stylesheets/_presentations.scss
+++ b/app/assets/stylesheets/_presentations.scss
@@ -1,6 +1,6 @@
 .presentation-title {
   padding-top: 3em;
-  font-size: 24px;
+  font-size: 3vh;
   padding-left: 0.5em;
   padding-right: 0.5em;
   a {
@@ -13,5 +13,5 @@
 }
 
 .presentation-presenter {
-  font-size: 18px;
+  font-size: 2vh;
 }
