--- a/app/assets/stylesheets/_thumbnails.scss
+++ b/app/assets/stylesheets/_thumbnails.scss
@@ -15,7 +15,7 @@
 .slide-number-thumbnail {
   margin-top: 1em;
   color: #ffffff;
-  font-size: 36px;
+  font-size: 4vh;
 
   &--admin {
     margin-top: 0.5em;
@@ -23,12 +23,12 @@
 }
 
 .slide-header-thumbnail {
-  font-size: 24px;
+  font-size: 3vh;
 }
 
 .add-new-btn {
   margin-top: 1em;
-  font-size: 64px;
+  font-size: 7vh;
   a {
     color: #ffffff;
   }
