--- a/app/views/presentations/show.html.slim
+++ b/app/views/presentations/show.html.slim
@@ -1,5 +1,4 @@
-.page-header
-  h1= @presentation.title
+.page-header = @presentation.title
 
 .thumbnail.thumbnail--presentation
   - if admin_signed_in?
