--- a/app/views/slides/index.html.slim
+++ b/app/views/slides/index.html.slim
@@ -1,6 +1,5 @@
 - if admin_signed_in?
-  div.page-header
-    h1 Listing slides
+  .page-header Listing slides
 
   table.table.table-striped.table-hover
     thead
