--- a/lib/templates/slim/scaffold/show.html.slim
+++ b/lib/templates/slim/scaffold/show.html.slim
@@ -1,5 +1,4 @@
-.page-header
-  h1 <%= singular_table_name.capitalize %>
+.page-header <%= singular_table_name.capitalize %>
 
 dl
 <% attributes.each do |attribute| -%>
