--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,12 +11,26 @@
   display: flex;
   justify-content: space-between;
   padding: 1em;
+  height: 10vh;
 }
 
 .home-icon {
+  width: 3vh;
+
+  img {
+    width: 100%;
+  }
+}
+
+.session-icon {
+  width: 3vh;
+
+  img {
+    width: 100%;
+  }
 }
 
 .page-header {
   text-align: center;
-  font-size: 64px;
+  font-size: 5vh;
 }
