--- a/app/views/presentations/edit.html.slim
+++ b/app/views/presentations/edit.html.slim
@@ -1,6 +1,5 @@
 - if admin_signed_in?
-  .page-header
-    h1 Editing presentation
+  .page-header Editing presentation
 
   == render 'form', presentation: @presentation
 - else
