--- a/app/views/presentations/new.html.slim
+++ b/app/views/presentations/new.html.slim
@@ -1,6 +1,5 @@
 - if admin_signed_in?
-  .page-header
-    h1 Create presentation
+  .page-header Create presentation
 
   == render 'form', presentation: @presentation
 - else
