--- a/app/views/slides/edit.html.slim
+++ b/app/views/slides/edit.html.slim
@@ -1,6 +1,5 @@
 - if admin_signed_in?
-  .page-header
-    h1 Editing slide
+  .page-header Editing slide
 
   == render 'form', slide: @slide
 - else
