--- a/app/views/slides/new.html.slim
+++ b/app/views/slides/new.html.slim
@@ -1,6 +1,5 @@
 - if admin_signed_in?
-  .page-header
-    h1 Create slide
+  .page-header Create slide
 
   == render 'form', slide: @slide
 - else
