--- a/lib/templates/slim/scaffold/index.html.slim
+++ b/lib/templates/slim/scaffold/index.html.slim
@@ -1,5 +1,4 @@
-div.page-header
-  h1 Listing <%= plural_table_name %>
+.page-header Listing <%= plural_table_name %>
 
 table.table.table-striped.table-hover
   thead
