--- a/lib/templates/slim/scaffold/new.html.slim
+++ b/lib/templates/slim/scaffold/new.html.slim
@@ -1,4 +1,3 @@
-.page-header
-  h1 Create <%= singular_table_name %>
+.page-header Create <%= singular_table_name %>
 
 == render 'form', <%= singular_table_name %>: @<%= singular_table_name %>
