--- a/app/assets/stylesheets/_thumbnails.scss
+++ b/app/assets/stylesheets/_thumbnails.scss
@@ -5,11 +5,11 @@
 
 .thumbnail {
   text-align: center;
-  width: 366px;
-  height: 199px;
+  width: 14vw;
+  height: 22vh;
   background-color: #d8d8d8;
-  margin-right: 1em;
-  margin-top: 1em;
+  margin-right: 1vw;
+  margin-top: 1vh;
 }
 
 .slide-number-thumbnail {
